Add basic content to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,52 @@
 
 
 <body>
+
+    <div class="first">
+        <div class="first-left">Header Logo</div>
+        <div class="first-right">
+            <div>header link one</div>
+            <div>header link two</div>
+            <div>header link three</div>
+        </div>
+    </div>
+
+
+    <div class="second">
+        <div class="second-left">
+            <div>These musics are awesome</div>
+            <div>No pain no gain; no meme no life</div>
+            <button>Sign up</button>
+        </div>
+        <div>
+            <div>Place a meme image here, quuote source in README</div>
+        </div>
+
+    </div>
+
+    <div class="third">
+        <div>Some random information</div>
+        <div>
+            <div>Box 1</div>
+            <div>Box 2</div>
+            <div>Box 3</div>
+            <div>Box 4</div>
+        </div>
+    </div>
+
+    <div class="forth">
+        <div>Insert a quote here</div>
+
+    </div>
+
+    <div class="fifth">
+        <div> Call to action! It's time!</div>
+    </div>
+
+    <div class="sixth">
+        <div>Copyright The Odin Project 2021</div>
+
+    </div>
     
 </body>
 </html>
