Add style to first row

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 
     <div class="first">
-        <div class="first-left">Header Logo</div>
+        <div class="first-left">Meme Lover</div>
         <div class="first-right">
-            <div>header link one</div>
-            <div>header link two</div>
-            <div>header link three</div>
+            <div><a href="https://www.youtube.com/watch?v=lhckuhUxcgA">Meme #1</a></div>
+            <div><a href="https://www.youtube.com/watch?v=-1qju6V1jLM">Meme #2</a></div>
+            <div><a href="https://www.youtube.com/watch?v=l60MnDJklnM">Meme #3</a></div>
         </div>
     </div>
 
