Add style for second row items

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
     <div class="second">
         <div class="second-left">
-            <div>These musics are awesome</div>
-            <div>No pain no gain; no meme no life</div>
-            <button>Sign up</button>
+            <div class="header">These memes are awesome</div>
+            <div class="not-header">No pain no gain; no meme no life. What are you waiting for? Chinese new year?</div>
+            <button><a href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ">Sign up</a></button>
         </div>
         <div>
-            <div>Place a meme image here, quuote source in README</div>
+            <img src="img/xx.jpg" alt="Meme Forever">
         </div>
 
     </div>
