Add style to third and forth rows

--- a/index.html
+++ b/index.html
@@ -36,17 +36,24 @@
     </div>
 
     <div class="third">
-        <div>Some random information</div>
-        <div>
-            <div>Box 1</div>
-            <div>Box 2</div>
-            <div>Box 3</div>
-            <div>Box 4</div>
+        <div class="third-up">Some random information</div>
+        <div class="third-down">
+            <div class="third-down-item"><div class="center-text">Best meme award winner(2019-2022)</div></div>
+            <div class="third-down-item"><div class="center-text">No hidden cost; not credit card service</div></div>
+            <div class="third-down-item"><div class="center-text">Enjoy now, pay later; we trust you more than your gf does</div></div>
+            <div class="third-down-item"><div class="center-text">Suitable for all ages</div></div>
         </div>
     </div>
 
     <div class="forth">
-        <div>Insert a quote here</div>
+        <div class="forth-quote">
+            <em>
+            An Internet meme is a hijacking of the original idea. Instead of mutating by random change and spreading by a form 
+            of Darwinian selection, Internet memes are altered deliberately by human creativity. There is no attempt at accuracy 
+            of copying, as with genes - and as with memes in their original version.
+            </em>
+        </div>
+        <div class="forth-quoter"><div class="forth-quoter-mini">-Richard Dawkins</div></div>
 
     </div>
 
