--- a/index.html
+++ b/index.html
@@ -65,13 +65,8 @@
         <button class="fifth-right"><a href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ">Sign up</a></button>
     </div>
 
-
-
-
-
     <div class="sixth">
-        <div>Copyright The Odin Project 2021</div>
-
+        <div>Copyright <span>&#169;</span> The Odin Project 2021</div>
     </div>
     
 </body>
